[gd_scene load_steps=20 format=2]

[ext_resource path="res://witch.tscn" type="PackedScene" id=1]
[ext_resource path="res://EightBitDragon-anqx.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://hit2.wav" type="AudioStream" id=4]
[ext_resource path="res://card.tscn" type="PackedScene" id=5]
[ext_resource path="res://default_card.png" type="Texture" id=6]
[ext_resource path="res://no_card.png" type="Texture" id=7]
[ext_resource path="res://water_card.png" type="Texture" id=8]
[ext_resource path="res://card_selected.png" type="Texture" id=9]
[ext_resource path="res://fire_card.png" type="Texture" id=10]
[ext_resource path="res://bullet.tscn" type="PackedScene" id=11]
[ext_resource path="res://Cards.gd" type="Script" id=12]
[ext_resource path="res://menubutton.png" type="Texture" id=13]
[ext_resource path="res://Inventory.gd" type="Script" id=14]
[ext_resource path="res://hpbar.png" type="Texture" id=15]
[ext_resource path="res://mpbar.png" type="Texture" id=16]
[ext_resource path="res://shieldbar.png" type="Texture" id=17]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="main" type="Node2D"]

[node name="Witch" parent="." instance=ExtResource( 1 )]
position = Vector2( 148.476, 336.842 )

[node name="Cards" type="Node2D" parent="."]
z_index = 1
script = ExtResource( 12 )

[node name="CardSelected" type="Sprite" parent="Cards"]
position = Vector2( 350, 550 )
z_index = 1
texture = ExtResource( 9 )

[node name="Spellcard1" parent="Cards" instance=ExtResource( 5 )]
z_index = 1

[node name="Sprite2" type="Sprite" parent="Cards/Spellcard1"]
z_index = 1
texture = ExtResource( 6 )

[node name="Spellcard2" parent="Cards" instance=ExtResource( 5 )]
position = Vector2( 435, 550 )
z_index = 1

[node name="Sprite2" type="Sprite" parent="Cards/Spellcard2"]
z_index = 1
texture = ExtResource( 10 )

[node name="Spellcard3" parent="Cards" instance=ExtResource( 5 )]
position = Vector2( 520, 550 )
z_index = 1

[node name="Sprite2" type="Sprite" parent="Cards/Spellcard3"]
z_index = 1
texture = ExtResource( 8 )

[node name="Spellcard4" parent="Cards" instance=ExtResource( 5 )]
position = Vector2( 605, 550 )
z_index = 1

[node name="Sprite2" type="Sprite" parent="Cards/Spellcard4"]
z_index = 1
texture = ExtResource( 7 )

[node name="Spellcard5" parent="Cards" instance=ExtResource( 5 )]
position = Vector2( 690, 550 )
z_index = 1

[node name="Sprite2" type="Sprite" parent="Cards/Spellcard5"]
texture = ExtResource( 7 )

[node name="bullet" parent="." instance=ExtResource( 11 )]
position = Vector2( -46.94, 637.78 )
scale = Vector2( 1.976, 2.072 )

[node name="Inventory" type="Area2D" parent="."]
position = Vector2( 287.779, 548.221 )
z_index = 1
script = ExtResource( 14 )

[node name="button" type="Sprite" parent="Inventory"]
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Inventory"]
scale = Vector2( 1.596, 1.614 )
shape = SubResource( 1 )

[node name="hpbar" type="Sprite" parent="."]
position = Vector2( 512, 20 )
texture = ExtResource( 15 )

[node name="mpbar" type="Sprite" parent="."]
position = Vector2( 512, 35 )
texture = ExtResource( 16 )

[node name="shieldbar" type="Sprite" parent="."]
position = Vector2( 512, 50 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 416.955
margin_top = 484.642
margin_right = 601.955
margin_bottom = 501.642
custom_fonts/font = SubResource( 2 )
text = "New spell unlocked!"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="UI" parent="." instance=ExtResource( 3 )]
scale = Vector2( 0.5, 0.5 )
transform = Transform2D( 0.5, 0, 0, 0.5, 0, 0 )

[node name="EnemyHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="input_event" from="Witch" to="Witch" method="_on_Witch_input_event"]
[connection signal="input_event" from="Inventory" to="Inventory" method="_on_Inventory_input_event"]
